--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit>=1.30.0
-pandas>=2.0.0
-requests>=2.31.0
-transformers>=4.38.0
-torch>=2.1.0
+streamlit
+pandas
+requests
+torch==2.1.0
+transformers==4.38.2
+sentencepiece
