--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 streamlit==1.27.2
 pandas==2.1.4
 requests==2.31.0
-transformers>=4.0.0
-torch==2.1.0
+transformers==4.41.2
+torch==2.2.2
+safetensors==0.4.3
 sentencepiece==0.1.99
 geocoder
 matplotlib>=3.0.0
