--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,9 @@
-streamlit==1.27.2
-pandas==2.1.4
-requests==2.31.0
+streamlit>=1.22.0
+requests>=2.28.0
+pandas>=1.5.0
 transformers>=4.30.0
+firebase-admin>=6.0.0
+plotly>=5.13.0
+wordcloud>=1.9.2
+matplotlib>=3.7.0
 torch>=2.0.0
-safetensors==0.4.3
-sentencepiece==0.1.99
-geocoder
-matplotlib>=3.0.0
-gspread
-oauth2client
-firebase-admin
-geopy
-streamlit-javascript
-plotly>=5.0.0
-wordcloud>=1.8.1
-beautifulsoup4
